--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>       
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Run Buddy</title>
 </head>
 <body>
@@ -27,7 +28,12 @@
         </nav>
     </header>
         <!--hero-->
-        <section></section>
+        <section>
+            <div>
+                <h3>Get Started Today</h3>
+                <p>Fill out this form and one of our trainers will schedule a consult</p>w
+            </div>
+        </section>
         <!--what we do section-->
         <section>
             <h2>What We Do</h2>
@@ -47,6 +53,10 @@
         <!--footer-->
     <footer>
         <h2>❤️ Made with love by Run Buddy</h2>
+        <div>
+            <a href="#">Read Our Privacy Policy</a><br />
+            &copy; 2023 Run Buddy, Inc.
+        </div>
     </footer>
 </body>
 
